Amend styles on thank you page

--- a/thank-you.html
+++ b/thank-you.html
@@ -108,26 +108,32 @@
     <i class="fas fa-arrow-up"></i>
   </a>
 
-	<main id="main-content"
-		class="container-fluid mb-5 pt-5 h-75 main-background d-flex flex-column justify-content-center">
-		<div class="container mt-5">
-			<h1 class="my-5 text-center">Thank You</h1>
-			<div class="row">
-				<div class="col-md-6 mb-4">
-					<form id="contact-form" class="bg-feature-card p-4 rounded shadow-sm">
-					
-					</form>
-				</div>
-				<div class="col-md-6 mb-4">
-					<div class="card bg-feature-card p-4 rounded shadow-sm">
-						<div class="card-body get-in-touch-card">
-						
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</main>
+  <main id="main-content" class="container-fluid vh-100 main-background d-flex flex-column justify-content-center align-items-center">
+    <div class="container text-center">
+        <h1 class="mb-4 text-dark fw-bold fs-2">Thank You!</h1>
+        <div class="row align-items-center justify-content-center">
+            <!-- Image Section -->
+            <div class="col-12 col-md-4 mb-3">
+                <img src="assets/images/letter.webp" alt="Thank You Letter Image" class="img-fluid shadow-sm rounded">
+            </div>
+            <!-- Message Section -->
+            <div class="col-12 col-md-6">
+                <div class="card bg-light p-3 rounded shadow-sm">
+                    <div class="card-body">
+                        <p class="text-muted fs-6">
+                            Thank you for contacting us and for using the <strong>Access Granted</strong> web application! 
+                            We hope our platform provided you with an inclusive and helpful experience.
+                        </p>
+                        <p class="text-muted fs-6">
+                            We appreciate your feedback and will review your submission shortly.
+                        </p>
+                        <p class="fw-bold text-secondary mb-0">Best wishes,<br>Access Granted Team</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 	<hr>
 
